--- a/classes/CS2800.md
+++ b/classes/CS2800.md
@@ -75,6 +75,7 @@ George (Spring 2020): I personally really enjoyed this class and found the mater
 | Fall 2018 | MWF 10:10 - 11:00 | Michael George | B+ | <https://courses.cs.cornell.edu/cs2800/wiki/index.php/CS_2800_Fall_2018> |
 | Fall 2019 | MWF 10:10 - 11:00 | Michael George | B+ | <https://courses.cs.cornell.edu/cs2800/wiki/index.php/CS_2800_Fall_2019> |
 | Spring 2020 | MWF 10:10 - 11:00 | Michael George | N/A (COVID-19) | <https://courses.cs.cornell.edu/cs2800/wiki/index.php/CS_2800_Spring_2020> |
+| Fall 2021 | MWF 10:10 - 11:00 | Frans Schalekamp & Alexandra Silva | B+ | <https://classes.cornell.edu/browse/roster/FA21/class/CS/2800> |
 
 Hopcroft typically teaches this in the fall and Pass, in the spring. Kozen is teaching this in Fall 2013, though. Michael George took over in Fall 2014. Anke van Zuylen will be teaching this starting Fall 2020.
 
